--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kidney = pd.read_csv(\"E:/Data Science Institute/Datasets/Kidney Stones/kidney stones.csv\")"
+    "kidney = pd.read_csv(\"Datasets/Kidney Stones/kidney stones.csv\")"
    ]
   },
   {
